--- a/styles/main.css
+++ b/styles/main.css
@@ -2,13 +2,14 @@
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
+  text-decoration: none;
 }
 
 ul {
   list-style: none;
 }
 
-a {
+* {
   text-decoration: none;
 }
 
@@ -38,6 +39,16 @@ a {
   align-items: center;
   flex-wrap: nowrap;
 }
+@media screen and (min-width: 768px) {
+  .header {
+    height: 8vh;
+  }
+}
+@media screen and (min-width: 768px) and (min-width: 1280px) {
+  .header {
+    height: 8vh;
+  }
+}
 .header__nav {
   background-color: #323232;
   width: 100%;
@@ -49,7 +60,6 @@ a {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 24px;
   }
 }
 @media screen and (min-width: 1280px) {
@@ -59,11 +69,12 @@ a {
     justify-content: space-between;
     align-items: center;
     flex-wrap: wrap;
-    padding: 48px;
   }
 }
 .header__nav--container {
-  padding: 12px;
+  padding-left: 16px;
+  padding-top: 16px;
+  padding-bottom: 8px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -77,7 +88,8 @@ a {
     justify-content: flex-start;
     align-items: center;
     flex-wrap: wrap;
-    margin-left: 0;
+    margin-left: 48px;
+    padding: 0;
   }
 }
 .header__nav--logo {
@@ -104,8 +116,13 @@ a {
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
-    gap: 27px;
-    margin-left: -50%;
+    width: 30%;
+    margin-left: -40%;
+  }
+}
+@media screen and (min-width: 1280px) {
+  .header__menu {
+    width: 25%;
   }
 }
 .header__menu--link {
@@ -140,6 +157,29 @@ a {
   border-bottom: 3px solid #FFFFFF;
   margin: 0;
   width: 50%;
+}
+@media screen and (min-width: 768px) {
+  .link__highlight--container {
+    height: 8vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: nowrap;
+  }
+}
+
+.link__text {
+  color: #E1E1E1;
+}
+
+.link__text:hover {
+  color: #FAFAFA;
+}
+
+.link__text:active {
+  color: #FFFFFF;
+  font-weight: 900;
 }
 
 .banner {
@@ -226,7 +266,7 @@ a {
 }
 .hero__title {
   padding: 16px;
-  width: 90%;
+  width: 100%;
   font-family: "NunitoSans";
   font-size: 24px;
   line-height: 32px;
@@ -300,7 +340,6 @@ a {
 }
 .hero__subtitle3 {
   padding-top: 24px;
-  padding-bottom: 16px;
   width: 100%;
   padding-left: 16px;
   padding-right: 16px;
@@ -308,13 +347,12 @@ a {
   font-size: 24px;
   line-height: 32px;
   font-weight: 700;
-  font-weight: 300;
 }
 @media screen and (min-width: 768px) {
   .hero__subtitle3 {
     padding-top: 24px;
     padding-right: 36px;
-    padding-left: 36px;
+    padding-left: 12px;
   }
 }
 .hero__content {
@@ -332,7 +370,7 @@ a {
   }
 }
 .hero__content--text {
-  padding: 10px;
+  padding: 16px;
   width: 90%;
   font-family: "NunitoSans";
   font-size: 13px;
@@ -343,7 +381,7 @@ a {
   .hero__content--text {
     font-family: "NunitoSans";
     font-size: 14px;
-    line-height: 24px;
+    line-height: 22px;
     font-weight: 500;
   }
 }
@@ -359,7 +397,7 @@ a {
   .hero__content--text2 {
     font-family: "NunitoSans";
     font-size: 14px;
-    line-height: 24px;
+    line-height: 22px;
     font-weight: 500;
   }
 }
@@ -423,8 +461,6 @@ a {
   flex-wrap: wrap;
   width: 90%;
   padding-bottom: 16px;
-  padding-left: 16px;
-  padding-right: 16px;
 }
 @media screen and (min-width: 768px) {
   .content__image--item {
@@ -446,8 +482,6 @@ a {
   font-size: 24px;
   line-height: 32px;
   font-weight: 700;
-  font-weight: 900;
-  font-size: 22px;
   position: relative;
 }
 @media screen and (min-width: 768px) {
@@ -475,7 +509,6 @@ a {
   width: 42%;
   height: 6vh;
   margin-left: 3%;
-  padding-bottom: 16px;
 }
 @media screen and (min-width: 768px) {
   .footer__icon {
@@ -510,6 +543,7 @@ a {
     align-items: center;
     flex-wrap: nowrap;
     width: 100%;
+    margin-top: -3%;
   }
 }
 @media screen and (min-width: 768px) and (min-width: 1280px) {
@@ -530,7 +564,7 @@ a {
   .footer__text--title {
     font-family: "NunitoSans";
     font-size: 14px;
-    line-height: 24px;
+    line-height: 22px;
     font-weight: 500;
     font-weight: 700;
   }
@@ -539,7 +573,7 @@ a {
   .footer__text--title {
     font-family: "NunitoSans";
     font-size: 14px;
-    line-height: 24px;
+    line-height: 22px;
     font-weight: 500;
     max-width: 1000px;
   }
@@ -554,7 +588,7 @@ a {
   .footer__text--content {
     font-family: "NunitoSans";
     font-size: 14px;
-    line-height: 24px;
+    line-height: 22px;
     font-weight: 500;
   }
 }
@@ -568,7 +602,7 @@ a {
   padding-bottom: 16px;
 }
 .footer__logo {
-  padding-top: 24px;
+  padding-top: 48px;
   padding-bottom: 16px;
   padding-left: 16px;
 }
@@ -576,7 +610,7 @@ a {
   .footer__logo {
     position: absolute;
     left: 80%;
-    top: 8%;
+    top: 6%;
     display: inline-block;
   }
 }
