--- a/styles/main.scss
+++ b/styles/main.scss
@@ -7,24 +7,30 @@
 .header{
   width:100%;
   @include flex(row,center,center,nowrap);
+  @include tablet{
+    height:8vh;
+    @include desktop{
+      height:8vh;
+    }
+  }
   &__nav{
     background-color:$primary-color1;
     width:100%;
     @include tablet{
       @include flex(row,space-between,center,wrap);
-      padding:24px;
     }
     @include desktop{
       @include flex(row,space-between,center,wrap);
-      padding:48px;
     }
     &--container{
-      padding:12px;
+      padding-left:16px;
+      padding-top:16px;
+      padding-bottom:8px;
       @include flex(row,center,center,wrap);
-
       @include tablet{
         @include flex(row,flex-start,center,wrap);
-        margin-left:0;
+        margin-left:48px;
+        padding:0
       }
       @include desktop{
       }
@@ -44,10 +50,11 @@
     text-align: center;
     @include tablet{
       @include flex(row,space-around,center,wrap);
-      gap:27px;
-      margin-left:-50%;
+      width:30%;
+      margin-left:-40%;
     }
     @include desktop{
+      width:25%;
     }
     &--link{
       padding-bottom: 10px;
@@ -70,8 +77,23 @@
   border-bottom:3px solid $primary-color3;
   margin:0;
   width:50%;
+  @include tablet{
+    height:8vh;
+    @include flex(row,center,center,nowrap)
+  }
+
+}
+.link__text{
+  color:$secondary-color2;
+}
+.link__text:hover{
+ color:$secondary-color3;
 }
 
+.link__text:active{
+  color:$primary-color3;
+  font-weight:900;
+}
 
 
 .banner{
@@ -115,11 +137,6 @@ color:$primary-color3;
   }
 }
 }
-
-// :active{
-// color: white;}
-// add border to Biography
-
 .hero{
   width:100%;
   @include tablet{
@@ -130,7 +147,7 @@ color:$primary-color3;
   }
   &__title{
     padding: 16px;
-    width:90%;
+    width:100%;
     @include mobile-pageheader;
     @include tablet{
       padding-top:48px;
@@ -178,16 +195,14 @@ color:$primary-color3;
   }
   &__subtitle3{
     padding-top:24px;
-    padding-bottom:16px;
     width:100%;
     padding-left:16px;
     padding-right:16px;
     @include mobile-sectionheader;
-    font-weight:300;
     @include tablet{
       padding-top:24px;
       padding-right: 36px;
-      padding-left: 36px;
+      padding-left: 12px;
     }
     @include desktop{
     }
@@ -202,7 +217,7 @@ color:$primary-color3;
     @include desktop{
     }
     &--text{
-      padding: 10px;
+      padding: 16px;
       width:90%;
       @include mobile-bodycopy;
       @include tablet{
@@ -260,9 +275,6 @@ color:$primary-color3;
       @include flex(row, center, center, wrap);
       width:90%;
       padding-bottom:16px;
-      padding-left:16px;
-      padding-right:16px;
-
       @include tablet{
         width: 30%;
       }
@@ -284,8 +296,6 @@ color:$primary-color3;
   padding-bottom:16px;
   padding-left:16px; 
   @include mobile-pageheader;
-  font-weight:900;
-  font-size:22px;
   position: relative;
   @include tablet{
     @include desktop-sectionheader;
@@ -302,7 +312,6 @@ color:$primary-color3;
   width:42%;
   height:6vh;
   margin-left:3%;
-  padding-bottom:16px;
   @include tablet{
     height:7vh;
     width:30%;
@@ -324,6 +333,7 @@ color:$primary-color3;
   @include tablet{
     @include flex(row,space-between,center,nowrap);
     width:100%;
+    margin-top:-3%;
     @include desktop{
       width:70%;
       margin-left:0;
@@ -357,13 +367,13 @@ color:$primary-color3;
 }
 }
 &__logo{
-  padding-top:24px;
+  padding-top:48px;
   padding-bottom:16px;
   padding-left:16px;
   @include tablet{
     position: absolute;
     left:80%;
-    top:8%;
+    top:6%;
     display: inline-block;
     @include desktop{
     }
