--- a/styles/partials/_globals.scss
+++ b/styles/partials/_globals.scss
@@ -2,12 +2,11 @@
   margin:0 auto;
   padding:0;
   box-sizing:border-box;
+  text-decoration:none;
 }
 ul{
   list-style: none;
 }
-a{
+*{
  text-decoration:none;
 }
-
- 
